<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindDoc</string>
    <string name="doc_button">Doctor</string>
    <string name="hos_button">Hospital</string>
    <string name="spec_button">Speciality</string>
    <string name="doc_content"></string>
    <string name="main_button">FIND DOC</string>
    <string name="search_hint">Search City</string>
    <string name="app_label">Search </string>
    <string name="title_activity_display_doctor">Display Doctor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_doc">DisplayDoc</string>
    <string name="title_activity_doc_detail">DocDetail</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Street_Name">Street</string>
    <string name="City_Name">City</string>
    <string name="Hospital_Name">Hospital</string>
    <string name="Contact_No">Contact No.</string>
    <string name="Speciality">Speciality</string>
    <string name="Working_Hr">Working Hr.</string>
    <string name="zipcode">Enter ZipCode</string>
</resources>